:white_check_mark: [STMT-200] study 관련 테스트 및 stub과 setup, teardown 수정